--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -47,8 +47,6 @@
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
   --color-sidebar-ring: var(--sidebar-ring);
   --color-sidebar-border: var(--sidebar-border);
   --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
@@ -144,7 +142,7 @@
 }
 
 .markdown-body code {
-  font-family: var(--font-mono, monospace);
+  font-family: var(--font-sans, monospace);
 }
 
 .bg-custom-gradient {
@@ -191,5 +189,6 @@
     }
   body {
     @apply bg-background text-foreground;
-    }
+    font-family: var(--font-sans), sans-serif;
+  }
 }
